--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
     "react-spring": "^9.7.1",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
